2009-04-18  Ulrich Drepper  <drepper@redhat.com>

	* stdlib/strfmon_l.c (__vstrfmon_l): Don't wrap when computing width.
	Numerically stable check for valid width.

	* locale/programs/locarchive.c (open_archive): Map the entire file
	and not just the administrative data.
	(add_locale): When we find a hash sum match compare the content
	to be sure.

	* malloc/malloc.c (malloc_info): Output address space information.

2009-04-17  Ulrich Drepper  <drepper@redhat.com>

	* malloc/malloc.c (malloc_info): Also output system memory information.

	* sysdeps/unix/sysv/linux/kernel-features.h: All supported
	architectures have preadv/pwritev in 2.6.30.

	* sysdeps/posix/preadv.c: Reading of zero bytes is no error.
	* sysdeps/posix/readv.c: Likewise.
	Reported by Markus Armbruster <armbru@redhat.com>.

	* malloc/hooks.c (top_check): Force hook value into register.

2009-04-16  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* elf/rtld.c (dl_main): Really call _dl_sysdep_start_cleanup after all
	calls to _dl_relocate_object.

2009-04-16  Ulrich Drepper  <drepper@redhat.com>

	[BZ #9957]
	* malloc/malloc.c (force_reg): Define.
	(sYSMALLOc): Load hook variable into variable
	before test and force into register.
	(sYSTRIm): Likewise.
	(public_mALLOc): Force hook value into register.
	(public_fREe): Likewise.
	(public_rEALLOc): Likewise.
	(public_mEMALIGn): Likewise.
	(public_vALLOc): Likewise.
	(public_pVALLOc): Likewise.
	(public_cALLOc): Likewise.
	(__posix_memalign): Likewise.
	* malloc/arena.c (ptmalloc_init): Load hook variable into variable
	before test and force into register.
	* malloc/hooks.c (top_check): Likewise.
	(public_s_ET_STATe): Pretty printing.

	* resolv/res_send.c (send_dg): Don't just ignore the result we got
	in case we only receive one reply in single-request mode.

2009-04-16  Jakub Jelinek  <jakub@redhat.com>

	* elf/dl-open.c (_dl_open): Bump GL(dl_nns) to 1 if no libraries
	are dlopened in statically linked program even for __LM_ID_CALLER.
